--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 
 <head>
+  <meta charset="utf-8">
   <title></title>
   <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/reset.css">
   <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/screen.css">
-  <script type="text/javascript" src="javascripts/jquery-1.4.4.min.js"></script>
-  <script type="text/javascript" src="javascripts/application.js"></script>
+  <script src="javascripts/jquery-1.4.4.min.js"></script>
+  <script src="javascripts/application.js"></script>
 </head>
 
 <body>
