--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-  <script src="javascripts/jquery-1.4.4.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.js"></script>
+  <script>!window.jQuery && document.write(unescape('%3Cscript src="javascripts/jquery-1.4.4.js"%3E%3C/script%3E'))</script>
   <script src="javascripts/application.js"></script>
 </body>
 
