--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title></title>
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/reset.css">
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/screen.css">
+
+    <!--[if IE]>
+       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
   <body>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
