--- a/index.html
+++ b/index.html
@@ -2,17 +2,19 @@
 <html lang="en">
    <head>
       <meta charset="utf-8">
-      <title></title>
-      <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/reset.css">
-      <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/screen.css">
+      <title>Title.</title>
+      <link rel="stylesheet" type="text/css" media="screen" href="css/reset.css">
+      <link rel="stylesheet" type="text/css" media="screen" href="css/screen.css">
 
       <!--[if IE]>
          <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
       <![endif]-->
    </head>
    <body>
-      <script src="//ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
-      <script>!window.jQuery && document.write(unescape('%3Cscript src="javascripts/jquery-1.4.4.min.js"%3E%3C/script%3E'))</script>
-      <script src="javascripts/application.js"></script>
+      <!-- Pick one..
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/mootools/1.3.0/mootools-yui-compressed.js"></script>
+      -->
+      <script src="js/application.js"></script>
    </body>
 </html>
